Fixed clipping in mobile vw.

--- a/frontend/src/components/project-carousel-page/ProjectParallaxCarousel.module.scss
+++ b/frontend/src/components/project-carousel-page/ProjectParallaxCarousel.module.scss
@@ -9,7 +9,6 @@
   box-sizing: border-box;
   margin-top: 40px;
   z-index: 0;
-  overflow: hidden;
 }
 
 .transparent-slide {
